# sound-annotation

./: README.md  package-lock.json  package.json  unocss.config.ts  vite.config.ts
src/: App.tsx  index.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/audio/: AudioContainer.tsx
src/components/parts/: Button.tsx
src/store/: log.ts
